# fullstack-react

./: Dockerfile  Makefile  README.md  dune  dune-project  fullstack-reason-react-demo.opam  package-lock.json  package.json
benchmark/: README.md
client/: Index.re  build.mjs  dune
server/: dune  server.re
shared/js/: dune
shared/native/: dune
shared/native/lib/: Align.re  App.re  Counter.re  Link.re  Root.re  Row.re  Spacer.re  Stack.re  Theme.re
